// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render a mobile table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={false}
        hasTableSwipeActions={false}
        isEmpty={false}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "down",
          }
        }
      />
    </styled.thead>
    <tbody>
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={false}
        hasTableSwipeActions={false}
        key="0"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "fail.pdf",
              "fileType": "PDF",
              "size": "8.2",
            },
            "id": "0",
            "isRemovable": true,
            "isSelectable": false,
            "onClick": [MockFunction],
            "rowContentOverride": [Function],
            "variant": "red",
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="swipe"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={false}
        hasTableSwipeActions={false}
        key="1"
        row={
          Object {
            "contentOverride": [Function],
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "uploading.pdf",
              "fileType": "PDF",
              "size": "99",
            },
            "id": "1",
            "isRemovable": true,
            "isSelectable": false,
            "progress": 0.7,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="swipe"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={false}
        hasTableSwipeActions={false}
        key="2"
        row={
          Object {
            "contentOverride": [Function],
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "success.pdf",
              "fileType": "PDF",
              "size": "3.7",
            },
            "id": "2",
            "isRemovable": true,
            "isSelectable": false,
            "progress": 0.5,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="swipe"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={false}
        hasTableSwipeActions={false}
        key="3"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "test.pdf",
              "fileType": "PDF",
              "size": "2.2",
            },
            "id": "3",
            "isSelectable": true,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="swipe"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={false}
        hasTableSwipeActions={false}
        key="4"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "test1.pdf",
              "fileType": "PDF",
              "size": "1.5",
            },
            "id": "4",
            "isSelectable": true,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="swipe"
      />
    </tbody>
  </styled.table>
</styled.div>
`;

exports[`<Table /> should render a table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={true}
        hasTableSwipeActions={false}
        isEmpty={false}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "down",
          }
        }
      />
    </styled.thead>
    <tbody>
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={true}
        hasTableSwipeActions={false}
        key="0"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "fail.pdf",
              "fileType": "PDF",
              "size": "8.2",
            },
            "id": "0",
            "isRemovable": true,
            "isSelectable": false,
            "onClick": [MockFunction],
            "rowContentOverride": [Function],
            "variant": "red",
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="hover"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={true}
        hasTableSwipeActions={false}
        key="1"
        row={
          Object {
            "contentOverride": [Function],
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "uploading.pdf",
              "fileType": "PDF",
              "size": "99",
            },
            "id": "1",
            "isRemovable": true,
            "isSelectable": false,
            "progress": 0.7,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="hover"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={true}
        hasTableSwipeActions={false}
        key="2"
        row={
          Object {
            "contentOverride": [Function],
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "success.pdf",
              "fileType": "PDF",
              "size": "3.7",
            },
            "id": "2",
            "isRemovable": true,
            "isSelectable": false,
            "progress": 0.5,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="hover"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={true}
        hasTableSwipeActions={false}
        key="3"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "test.pdf",
              "fileType": "PDF",
              "size": "2.2",
            },
            "id": "3",
            "isSelectable": true,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="hover"
      />
      <TableRow
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasLeftAction={true}
        hasTableSwipeActions={false}
        key="4"
        row={
          Object {
            "data": Object {
              "createAt": "05/01/2018",
              "fileName": "test1.pdf",
              "fileType": "PDF",
              "size": "1.5",
            },
            "id": "4",
            "isSelectable": true,
          }
        }
        selectedRows={
          Object {
            "3": false,
            "4": false,
          }
        }
        setSelectedRows={[Function]}
        touchType="hover"
      />
    </tbody>
  </styled.table>
</styled.div>
`;

exports[`<Table /> should render an empty table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={false}
        hasTableSwipeActions={false}
        isEmpty={true}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "down",
          }
        }
      />
    </styled.thead>
    <tbody>
      <tr>
        <styled.td
          colSpan={2}
        >
          <div>
            empty
          </div>
        </styled.td>
      </tr>
    </tbody>
  </styled.table>
</styled.div>
`;
